# nus-intel-sgx-fyp-final

./: .gitignore  README.md
src/: CMakeLists.txt
src/app_meterclient/: app_meterclient.cpp
src/app_meterwriter/: app_meterwriter.cpp  app_meterwriter.h  demo_meterwriter.cpp  demo_meterwriter.h
src/cmake/: SgxApp.cmake  SgxCommon.cmake  SgxEnclave.cmake
src/enclave_meterwriter/: enclave_meterwriter.cpp  enclave_meterwriter.edl
src/helper_app/: helper_app_attest.cpp  helper_app_attest.h  helper_app_attest_net.cpp  helper_app_attest_net.h  helper_app_ca_keys.cpp  helper_app_ca_keys.h  helper_app_cert.cpp  helper_app_cert.h  helper_app_fileio.cpp  helper_app_fileio.h  helper_app_fs.cpp  helper_app_fs.h  helper_app_net_exchange.cpp  helper_app_net_exchange.h  helper_app_net_service.cpp  helper_app_net_service.h  helper_app_sgx.cpp  helper_app_sgx.h
src/helper_app/test_helper_app_net_service/: client.cpp  server.cpp
src/helper_common/: helper_common_array.cpp  helper_common_array.h  helper_common_bufferio.cpp  helper_common_bufferio.h  helper_common_interface_sha256.cpp  helper_common_interface_sha256.h  helper_common_meter.cpp  helper_common_meter.h  helper_common_meter_logic.cpp  helper_common_meter_logic.h  helper_common_string.cpp  helper_common_string.h  helper_common_values.h  test_helper_common_bufferio.cpp  test_helper_common_meter.cpp  test_helper_common_string.cpp
src/helper_enclave/: helper_enclave_attestee.cpp  helper_enclave_attestee.h  helper_enclave_ca_keypair.cpp  helper_enclave_ca_keypair.h  helper_enclave_fileio.edl  helper_enclave_sha256.cpp  helper_enclave_sha256.h
src/lib_crypto/: lib_crypto.cpp  lib_crypto.edl  lib_crypto_app.cpp  lib_crypto_app.h
src/nosgx_app_meter/: nosgx_app_meter.cpp
src/sample_program/: Makefile  result_wrapper.cpp  test_source.cpp
